<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timer"
    android:background="@color/primaryLightAColor">

    <TextView
        android:id="@+id/text"
        android:layout_width="412dp"
        android:layout_height="153dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:text=""
        android:textSize="32dp" />

    <TextView
        android:id="@+id/timertext2"
        android:layout_width="320dp"
        android:layout_height="127dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/Timer_Text"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="320dp"
        android:layout_height="127dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:text="@string/Timer"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/redModeButton"
        android:layout_width="278dp"
        android:layout_height="93dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="388dp"
        android:text="@string/Red"
        android:textSize="36dp"
        app:backgroundTint="@color/primaryColor"
        app:iconTint="@color/primaryDarkColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="278dp"
        android:layout_height="93dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:text="@string/Cancel"
        android:textSize="24dp"
        app:backgroundTint="@color/primaryGColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />
</RelativeLayout>